--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -1,9 +1,24 @@
-#navigation_bar {
-    height: 70px;
-    background-color: lightblue;
-    width: 100%;
-    text-align:center;
+@media screen and (max-width: 1000px) {
+    .dropdown_navigaiton {
+        position: relative;
+        display: inline-block;
+    }
+    .navigation_bar {
+        display: none;
+    }
 }
+
+@media screen and (min-width: 1000px) {
+    .navigation_bar {
+        height: 70px;
+        background-color: lightblue;
+        width: 100%;
+        text-align:center;
+    }
+    .dropdown_navigaiton {
+        display: none;
+    }
+  }
 
 nav {
     vertical-align: top;
@@ -31,3 +46,37 @@ nav {
 .link-style:hover {
     background-color: lightskyblue;
 }
+
+.dropdown_button {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown_content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown_content .dropdown_element {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+/* Change color of dropdown links on hover */
+.dropdown_content .dropdown_element:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown_navigaiton:hover .dropdown_content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown_navigaiton:hover .dropdown_button {background-color: #3e8e41;}
