--- a/src/SlideshowComponent.css
+++ b/src/SlideshowComponent.css
@@ -15,11 +15,9 @@
     margin: auto;
 
     border-width: 1px;
-    border-color: blue;
+    border-color: blue;    /* ??? */
   }
 }
-
-
 
 /* Next & previous buttons */
 .prev, .next {
@@ -50,31 +48,4 @@
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
 }
